--- a/MyApplicationSienke/app/src/main/res/layout/activity_user_detail_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_user_detail_info.xml
@@ -38,9 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:scrollbarThumbVertical="@color/text_blue"
+        android:scrollbarSize="2dp"
         android:scrollbarStyle="insideOverlay"
-        android:scrollbarSize="2dp">
+        android:scrollbarThumbVertical="@color/text_blue">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -251,9 +251,9 @@
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:fillViewport="true"
-                    android:scrollbarThumbVertical="@color/text_blue"
+                    android:scrollbarSize="2dp"
                     android:scrollbarStyle="insideInset"
-                    android:scrollbarSize="2dp">
+                    android:scrollbarThumbVertical="@color/text_blue">
 
                     <LinearLayout
                         android:layout_width="match_parent"
