--- a/MyApplicationSienke/app/src/main/res/layout/activity_tesseract_ocr.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_tesseract_ocr.xml
@@ -15,7 +15,7 @@
         android:id="@+id/english"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:scaleType="fitXY"
         android:src="@mipmap/meter_example"/>
 
@@ -42,4 +42,36 @@
         android:gravity="center"
         android:textColor="@color/text_blue"
         android:layout_marginTop="10dp"/>
+
+    <ImageView
+        android:id="@+id/opencv_img"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/opencv_test"
+        android:layout_marginTop="50dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/opencv_original"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="查看原图"
+            android:textColor="@color/text_blue"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:id="@+id/opencv_gray"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="灰度化"
+            android:textColor="@color/text_blue"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"/>
+    </LinearLayout>
 </LinearLayout>
