--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in.xml
@@ -176,7 +176,8 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="130dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </ListView>
 
