--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
@@ -32,13 +32,13 @@
             android:id="@+id/clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
             android:text="清空"
             android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:padding="10dp"/>
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <ScrollView
@@ -135,14 +135,17 @@
                     android:text="关联类型"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/contact_type"
+                <TextView
+                    android:id="@+id/security_type"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/normal_button_bg_selector"
-                    android:hint="客户"
+                    android:drawableRight="@mipmap/down"
+                    android:gravity="center"
                     android:padding="8dp"
+                    android:text="客户"
+                    android:textColor="@color/text_black"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -171,7 +174,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/normal_button_bg_selector"
-                    android:hint="客户"
                     android:padding="8dp"
                     android:textSize="14sp" />
 
