--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_person_setting.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_person_setting.xml
@@ -26,45 +26,10 @@
             android:text="个人设置"
             android:textColor="@android:color/white"
             android:textSize="21sp" />
-
-        <ImageView
-            android:id="@+id/more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:padding="16dp"
-            android:src="@drawable/selecter_main_option" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/text_font_color_white">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:drawableLeft="@mipmap/setting_password"
-            android:drawablePadding="15dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="密码修改"
-            android:textColor="@color/text_black"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:padding="10dp"
-            android:src="@mipmap/move_go" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
+        android:id="@+id/person_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -93,6 +58,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -121,6 +87,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/general"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
