--- a/MyApplicationSienke/app/src/main/res/layout/activity_listview_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_listview_info.xml
@@ -57,7 +57,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/time"
+                    android:id="@+id/time1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
