--- a/MyApplicationSienke/app/src/main/res/layout/business_checking_listview_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/business_checking_listview_item.xml
@@ -31,6 +31,12 @@
             android:paddingLeft="10dp"
             android:textColor="@color/text_black" />
 
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:visibility="gone" />
+
 
         <ImageView
             android:id="@+id/go"
