--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_setting_news.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_setting_news.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/gray_thin"
     android:orientation="vertical">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,7 +18,6 @@
             android:src="@drawable/back_selector" />
 
         <TextView
-            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -27,89 +25,73 @@
             android:textColor="@android:color/white"
             android:textSize="21sp" />
     </RelativeLayout>
-
     <RelativeLayout
-        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@color/text_font_color_white">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:drawablePadding="15dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="账号"
+            android:padding="15dp"
+            android:text="接收新消息通知"
             android:textColor="@color/text_black"
             android:textSize="16sp" />
 
-        <ImageView
+        <CheckBox
+            android:id="@+id/slip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:padding="10dp"
-            android:src="@mipmap/move_go" />
-
+            android:layout_marginTop="10dp"
+            android:background="@drawable/slipselector"
+            android:button="@null" />
     </RelativeLayout>
-
     <RelativeLayout
-        android:id="@+id/news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@color/text_font_color_white">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:drawablePadding="15dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="新消息通知"
+            android:padding="15dp"
+            android:text="声音"
             android:textColor="@color/text_black"
             android:textSize="16sp" />
 
-        <ImageView
+        <CheckBox
+            android:id="@+id/slip1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:padding="10dp"
-            android:src="@mipmap/move_go" />
-
+            android:layout_marginTop="10dp"
+            android:background="@drawable/slipselector"
+            android:button="@null" />
     </RelativeLayout>
-
     <RelativeLayout
-        android:id="@+id/general"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="3dp"
         android:background="@color/text_font_color_white">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:drawablePadding="15dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="隐私"
+            android:padding="15dp"
+            android:text="震动"
             android:textColor="@color/text_black"
             android:textSize="16sp" />
 
-        <ImageView
+        <CheckBox
+            android:id="@+id/slip2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:padding="10dp"
-            android:src="@mipmap/move_go" />
-
+            android:layout_marginTop="10dp"
+            android:background="@drawable/slipselector"
+            android:button="@null" />
     </RelativeLayout>
-
 </LinearLayout>
