--- a/MyApplicationSienke/app/src/main/res/layout/activity_businessdata_listview_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_businessdata_listview_item.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="时间" />
+                android:text="2015-06-28 2015-06-29" />
 
         </LinearLayout>
     </LinearLayout>
