--- a/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
@@ -44,6 +44,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/user_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -53,14 +54,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="某某某日志第11周报告"
-                        android:textColor="@color/text_black"
-                        android:textSize="18dp" />
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="某某某"
+                            android:textColor="@color/text_black"
+                            android:textSize="18dp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="的工作汇报"
+                            android:layout_marginTop="10dp"
+                            android:textSize="18sp"
+                            android:textColor="@color/text_black"/>
+                    </LinearLayout>
+
+
 
 
                     <RelativeLayout
@@ -68,16 +83,10 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            android:id="@+id/time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="2017-03-07 11:46" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="10dp"
-                            android:text="2017.03.23" />
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -103,6 +112,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/week_report"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -115,6 +125,7 @@
             </RelativeLayout>
 
             <EditText
+                android:id="@+id/create_report"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/normal_button_bg_selector"
@@ -142,6 +153,7 @@
             </RelativeLayout>
 
             <EditText
+                android:id="@+id/summarize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/normal_button_bg_selector"
@@ -169,6 +181,7 @@
             </RelativeLayout>
 
             <EditText
+                android:id="@+id/next_plant"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/normal_button_bg_selector"
