--- a/MyApplicationSienke/app/src/main/res/drawable/detail_edittext.xml
+++ b/MyApplicationSienke/app/src/main/res/drawable/detail_edittext.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-    <solid android:color="#FF99CC" />
-    <corners android:bottomRightRadius="0dp"
-        android:bottomLeftRadius="5dp" android:topLeftRadius="5dp"
-        android:topRightRadius="0dp" />
+       android:shape="rectangle">
+    <solid android:color="@color/theme_colors"/>
+    <corners android:radius="8dp"/>
 </shape>
