--- a/MyApplicationSienke/app/src/main/res/layout/activity_report_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_report_info.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +27,7 @@
             android:textColor="@android:color/white"
             android:textSize="21sp" />
     </RelativeLayout>
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
