--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_user_detail_info_save.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_user_detail_info_save.xml
@@ -3,67 +3,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     android:paddingLeft="50dp"
     android:paddingRight="50dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/business_check_shape">
+        android:background="@drawable/business_check_shape"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="保存前请确保安检信息填写完整哦!"
-            android:textColor="@color/text_black"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="14sp"/>
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="保存前请确保安检信息填写完整哦!"
+            android:textColor="@color/text_black"
+            android:textSize="14sp" />
+
         <View
             android:layout_width="match_parent"
-            android:background="@color/gray_little_thin"
             android:layout_height="1dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:background="@color/gray_little_thin" />
 
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:background="@drawable/radio_group_shape">
+            android:background="@drawable/radio_group_shape"
+            android:orientation="horizontal">
+
             <RadioButton
                 android:id="@+id/cancel_rb"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:button="@null"
+                android:layout_weight="1"
                 android:background="@drawable/popupwindow_user_detail_info_cancle_selector"
+                android:button="@null"
                 android:gravity="center_horizontal"
-                android:text="取消"
-                android:textSize="16sp"
-                android:textColor="@color/text_blue"
+                android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp"/>
+                android:text="取消"
+                android:textColor="@color/text_blue"
+                android:textSize="16sp" />
+
             <View
                 android:layout_width="1dp"
-                android:background="@color/gray_little_thin"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:background="@color/gray_little_thin" />
+
             <RadioButton
                 android:id="@+id/save_rb"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:button="@null"
+                android:layout_weight="1"
                 android:background="@drawable/popupwindow_user_detail_info_save_selector"
+                android:button="@null"
                 android:gravity="center_horizontal"
-                android:text="确认保存"
-                android:textSize="16sp"
-                android:textColor="@color/text_blue"
+                android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp"/>
+                android:text="确认保存"
+                android:textColor="@color/text_blue"
+                android:textSize="16sp" />
         </RadioGroup>
     </LinearLayout>
 
